--- a/JS-Lesson-1/1-1.html
+++ b/JS-Lesson-1/1-1.html
@@ -92,10 +92,10 @@
 
 			oFace.onclick = function(){
 				if(flag){
-					this.src = 'img/face2.png';
+					this.src = 'img-1/face2.png';
 					flag = false;
 				}else{
-					this.src = 'img/face1.png';
+					this.src = 'img-1/face1.png';
 					flag = true;
 				}
 			};
@@ -121,11 +121,11 @@
 <body>
 <div class="box">
 	<div id="list">
-		<!--<p><img src="img/face1.png" alt=""/><span>透明度在JS中如何设置可以让IE都能够兼容？</span></p>-->
-		<!--<p><span>透明度在JS中如何设置可以让IE都能够兼容？</span><img src="img/face2.png" alt=""/></p>-->
+		<!--<p><img src="img-1/face1.png" alt=""/><span>透明度在JS中如何设置可以让IE都能够兼容？</span></p>-->
+		<!--<p><span>透明度在JS中如何设置可以让IE都能够兼容？</span><img src="img-1/face2.png" alt=""/></p>-->
 	</div>
 	<div id="inputbox">
-		<img src="img/face1.png" alt="" id="face"/>
+		<img src="img-1/face1.png" alt="" id="face"/>
 		<input type="text" value="" placeholder="选头像、输文字、点发送" id="inputtext"/>
 		<input type="button" value="发送" id="submit"/>
 	</div>
